<resources>
    <string name="app_name">AssamGovernmentJob</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_web">WebActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="txt_retry">Retry</string>
    <string name="txt_share">Share</string>
    <string name="txt_important">Important</string>
    <string name="txt_syllabus">Syllabus</string>
    <string name="txt_latest_result">Latest Result</string>
    <string name="txt_answer_key">Answer Key</string>
    <string name="txt_all_india_jobs">All India Jobs</string>
    <string name="txt_admit_card">Admit Card</string>
    <string name="txt_assam_government_jobs">Assam Government Jobs</string>
    <string name="txt_communicate">Communicate</string>
    <string name="txt_home">Home</string>
    <string name="txt_categories">Categories</string>
    <string name="admob_app_id">ca-app-pub-5336790697377010~1433568697</string>
    <string name="txt_banner_ad_unit_id">ca-app-pub-4528635502203774/6988461639</string>
    <!--<string name="txt_banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>-->
    <string name="txt_interstitial_ad_id">ca-app-pub-4528635502203774/2122668836</string>
    <!--<string name="txt_interstitial_ad_id">ca-app-pub-3940256099942544/1033173712</string>-->
    <string name="txt_network_error_message">Network not available, Please check internet connection.</string>
    <string name="txt_about_us">About Us</string>
    <string name="txt_privacy_policy">Privacy Policy</string>
    <string name="txt_share_text">https://play.google.com/store/apps/details?id=com.assamgovernmentjob</string>
    <string name="txt_share_title">Share Application</string>
    <string name="txt_about_us_url">https://assamgovernmentjob.com/about-us/</string>
    <string name="txt_privacy_url">https://assamgovernmentjob.com/privacy-policy/</string>
    <string name="txt_assam_government_job">Assam Government Job</string>
</resources>
