<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_grey_600_24dp"
            android:title="@string/txt_home" />
        <item android:title="@string/txt_categories">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_latest_jobs"
                        android:icon="@drawable/ic_description_grey_600_24dp"
                        android:title="@string/txt_assam_government_jobs" />
                    <item
                        android:id="@+id/nav_all_india_job"
                        android:icon="@drawable/ic_description_grey_600_24dp"
                        android:title="@string/txt_all_india_jobs" />
                    <item
                        android:id="@+id/nav_latest_admit_card"
                        android:icon="@drawable/ic_description_grey_600_24dp"
                        android:title="@string/txt_admit_card" />
                    <item
                        android:id="@+id/nav_answer_key"
                        android:icon="@drawable/ic_description_grey_600_24dp"
                        android:title="@string/txt_answer_key" />
                    <item
                        android:id="@+id/nav_latest_result"
                        android:icon="@drawable/ic_description_grey_600_24dp"
                        android:title="@string/txt_latest_result" />
                    <item
                        android:id="@+id/nav_syllabus"
                        android:icon="@drawable/ic_description_grey_600_24dp"
                        android:title="@string/txt_syllabus" />
                    <item
                        android:id="@+id/nav_important"
                        android:icon="@drawable/ic_description_grey_600_24dp"
                        android:title="@string/txt_important" />
                </group>
            </menu>
        </item>
    </group>

    <item android:title="@string/txt_communicate">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_share_grey_600_24dp"
                    android:title="@string/txt_share" />
                <item
                    android:id="@+id/nav_about_us"
                    android:icon="@drawable/ic_description_grey_600_24dp"
                    android:title="@string/txt_about_us" />
                <item
                    android:id="@+id/nav_privacy_policy"
                    android:icon="@drawable/ic_description_grey_600_24dp"
                    android:title="@string/txt_privacy_policy" />
            </group>
        </menu>
    </item>

</menu>
