<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.assamgovernmentjob.home.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_home"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="@dimen/s_10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/adView_home_activity"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        android:background="@android:color/white"
        android:visibility="gone"
        android:id="@+id/pb_progress"/>

    <RelativeLayout
        android:id="@+id/rl_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/web_toolbar">

        <Button
            android:id="@+id/btn_retry_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/s_margin_20dp"
            android:layout_marginRight="@dimen/s_margin_20dp"
            android:layout_marginTop="@dimen/s_margin_20dp"
            android:background="@android:color/holo_blue_dark"
            android:padding="@dimen/s_10dp"
            android:text="@string/txt_retry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_retry_home"
            android:text="@string/txt_network_error_message" />
    </RelativeLayout>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView_home_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:adSize="BANNER"
        ads:adUnitId="@string/txt_banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>

</android.support.constraint.ConstraintLayout>
